# EssentiaTD

./: .gitignore  LICENSE  README.md  index.html
assets/: gen_logo.py
docs/: building-essentia.md  lessons-chop-output.md
src/: CMakeLists.txt  EssentiaLoudnessCHOP.cpp  EssentiaLoudnessCHOP.h  EssentiaRhythmCHOP.cpp  EssentiaRhythmCHOP.h  EssentiaSpectralCHOP.cpp  EssentiaSpectralCHOP.h  EssentiaSpectrumCHOP.cpp  EssentiaSpectrumCHOP.h  EssentiaTonalCHOP.cpp  EssentiaTonalCHOP.h  Parameters_Loudness.cpp  Parameters_Loudness.h  Parameters_Rhythm.cpp  Parameters_Rhythm.h  Parameters_Spectral.cpp  Parameters_Spectral.h  Parameters_Spectrum.cpp  Parameters_Spectrum.h  Parameters_Tonal.cpp  Parameters_Tonal.h
src/Shared/: EssentiaInit.h  RingBuffer.h  Utils.h
td/: EssentiaTester.1.0.17.toe  EssentiaTester.1.0.24.toe  EssentiaTester.1.0.27.toe  EssentiaTester.1.0.52.toe  EssentiaTester.1.0.54.toe
td/Backup/: EssentiaTester.1.0.0.toe  EssentiaTester.1.0.1.toe  EssentiaTester.1.0.10.toe  EssentiaTester.1.0.11.toe  EssentiaTester.1.0.12.toe  EssentiaTester.1.0.13.toe  EssentiaTester.1.0.14.toe  EssentiaTester.1.0.15.toe  EssentiaTester.1.0.16.toe  EssentiaTester.1.0.2.toe  EssentiaTester.1.0.3.toe  EssentiaTester.1.0.4.toe  EssentiaTester.1.0.5.toe  EssentiaTester.1.0.6.toe  EssentiaTester.1.0.7.toe  EssentiaTester.1.0.8.toe  EssentiaTester.1.0.9.toe
